--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "brussens/yii2-maintenance-mode",
+    "name": "malsa/yii2-maintenance-mode",
     "description": "Maintenance mode component for Yii framework 2.x.x version.",
     "license": "MIT",
     "type": "yii2-extension",
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "brussens\\maintenance\\": ""
+            "malsa\\maintenance\\": ""
         }
     }
 }
