--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,33 @@
 {
-    "name": "brussens/yii2-maintenance-mode",
+    "name": "malsa/yii2-maintenance-mode",
     "description": "Maintenance mode component for Yii framework 2.x.x version.",
     "license": "MIT",
     "type": "yii2-extension",
+    "version":"0.2.7",
     "keywords": ["yii", "yii2", "maintenance", "mode"],
     "authors": [
         {
             "name": "Brusenskiy Dmitry",
-            "email": "brussens@nativeweb.ru",
-            "url": "http://nativeweb.ru"
+            "email": "brussens@nativeweb.ru"
+        },
+        {
+            "name": "Malsa"
         }
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0",
-        "yiisoft/yii2": "*"
+        "php": ">=7.1.0",
+        "yiisoft/yii2": "^2.0.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/MattRh/yii2-maintenance-mode"
+        }
+    ],
     "autoload": {
         "psr-4": {
-            "brussens\\maintenance\\": ""
+            "malsa\\maintenance\\": ""
         }
     }
 }
